src/test/ui/error-codes/E0117.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/E0117.rs:1:1
   |
LL | impl Drop for u32 {}
   | ^^^^^^^^^^^^^^---
   | |             |
   | |             `u32` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0120]: the `Drop` trait may only be implemented for structs, enums, and unions
  --> $DIR/E0117.rs:1:15
   |
LL | impl Drop for u32 {}
   |               ^^^ must be a struct, enum, or union

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0117, E0120.
For more information about an error, try `rustc --explain E0117`.
